<resources>
    <string name="app_name">ToDoNotesApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_data">No DATA</string>
    <string name="addNotesTitle">Title</string>
    <string name="addNotesDescription">Description</string>
    <string name="search_menu">Search</string>
    <string name="sort_by_menu">Sort By</string>
    <string name="priority_high">Priority High</string>
    <string name="priority_low">Priority Low</string>
    <string name="delete_all">Delete All</string>
    <string name="add_notes">Add Notes</string>
    <string name="save_notes">Save Notes</string>
    <string name="delete_notes">Delete Notes</string>

    <string-array name="priorities">
        <item>High Priority</item>
        <item>Medium Priority</item>
        <item>Low Priority</item>
    </string-array>
</resources>